--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Savolaisjuttuja-b-Seitseman-murrehumoreskia_73688
 _version: 0.1.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Rissanen, Santeri
@@ -12,6 +15,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/57154
     wikipedia: https://fi.wikipedia.org/wiki/Santeri_Rissanen
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/73688#Savolaisjuttuja-b-Seitseman-murrehumoreskia
 gutenberg_issued: '2024-05-24'
 gutenberg_type: Text
 identifiers:
